fix: :adhesive_bandage: fix test